# mpxa

./: .clang-format  .gitignore  CMakeLists.txt  Readme.md  pyproject.toml  setup.py
.copilot/: orchestrator_plan.md
.github/workflows/: ci.yml
_codeql_build_dir/: profile_mpfa
_codeql_build_dir/tests/: test_mpxa
bindings/python/: compressed_storage_bindings.cpp  discr_bindings.cpp  grid_bindings.cpp  mpxa_bindings.cpp  tensor_bindings.cpp
include/: compressed_storage.h  discr.h  grid.h  mpfa_detail.h  multipoint_common.h  stencil_data.h  tensor.h  tpfa_detail.h
linalg/: compressed_storage.cpp  compressed_storage.h
src/: CMakeLists.txt  Readme.md  compressed_storage.cpp  grid.cpp  mpfa.cpp  multipoint_common.cpp  profile_mpfa.cpp  stencil_data.cpp  tensor.cpp  tpfa.cpp
src/fv/: discr.h  tpfa.cpp
src/grid/: grid.cpp  grid.h
src/mpxa/: __init__.py  _mpxa.pyi  porepy_ad_bridge.py  porepy_bridge.py
src/utils/: compressed_storage.cpp  compressed_storage.h  tensor.cpp  tensor.h
tests/: CMakeLists.txt  test_tpfa.cpp
tests/cpp/: test_basis_function_computation.cpp  test_compressed_storage.cpp  test_grid.cpp  test_interaction_region.cpp  test_mpfa.cpp  test_tensor.cpp  test_tpfa.cpp
tests/grid/: test_grid.cpp
tests/python/: test_compressed_storage.py  test_grid.py  test_tensor.py
tests/python/porepy/: model_integration.py  porepy_bridge.py  test_fv.py  test_grid_construction.py  test_model_integration.py  test_sparse_storage.py  test_tpfa.py  test_tpfa_mpfa.py
tests/utils/: test_compressed_storage.cpp  test_tensor.cpp
