[build-system]
requires = ["setuptools", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"


[project]
name = "mpxa"
version = "0.0.1"
dependencies = [
    "numpy",
    "pybind11>=2.6.0",
    "scipy",
]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-runner"
]